<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/user_avatar_image"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/avatar_5_raster"
        app:srcCompat="@drawable/circle"
        tools:background="@tools:sample/avatars"
        tools:srcCompat="@drawable/circle"
        android:contentDescription="@string/profile_image"/>


    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/user_points_text"
        app:layout_constraintEnd_toStartOf="@+id/user_rank_text"
        app:layout_constraintStart_toEndOf="@+id/user_avatar_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/user_points_text"
        android:layout_width="228dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_points"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_rank_text"
        app:layout_constraintStart_toEndOf="@+id/user_avatar_image"
        app:layout_constraintTop_toBottomOf="@+id/user_name_text"
        tools:text="10,000 pts" />

    <TextView
        android:id="@+id/user_rank_text"
        android:layout_width="36dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_rank"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/rank.json/data/rank" />

</androidx.constraintlayout.widget.ConstraintLayout>
